maintenance/maintenance-deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nba-maintenance
  labels:
    app: nba-maintenance
spec:
  replicas: 2
  template:
    metadata:
      name: nba-maintenance
      labels:
        app: nba-maintenance
    spec:
      containers:
      - name: nba-maintenance
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          httpGet:
            path: /
            port: 80
        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 60
          httpGet:
            path: /
            port: 80
          failureThreshold: 10
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "256Mi"
        image: naturalis/nba-maintenance:19-12-2018
        imagePullPolicy: Always
        ports:
        - containerPort: 80
