maintenance/maintenance-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nba-maintenance
spec:
  selector:
    app: nba-maintenance
  ports:
  - port: 80
