maintenance/nba-maintenance-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nba-maintenance-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "nba-maintenance.k2.k8s.naturalis.nl"
    http:
      paths:
      - backend:
          serviceName: nba-maintenance
          servicePort: 80
